# triyinworkflows

./: CMakeLists.txt
.github/workflows/: android.yml
cmake/: CPackIosDeployIpa.cmake.in  Package.cmake  if(QT_MOC_EXECUTABLE).cmake
platform/android/: AndroidManifest.xml.in  build.gradle.in
platform/android/res/values/: strings.xml
platform/android/res/xml/: file_paths.xml
platform/android/src/com/sigpacgo/app/: QFieldActivity.java  QFieldCloudService.java  QFieldPositioningService.java  QFieldUtils.java
scripts/: android_package_setup.sh  build-vcpkg.sh  setup-package.sh  version_number.sh
scripts/ci/: env_gh.sh  generate-version-details.sh
src/app/: CMakeLists.txt  android-qfield-deployment-settings.json  main.cpp
src/service/: qfieldpositioningservice.cpp
